Form - use $ instead of bitcoin now that we have Paypal; fix whitespace in css
add auto-complete support in footer / my.js

--- a/htdocs/s/my.css
+++ b/htdocs/s/my.css
@@ -87,7 +87,8 @@ select:focus
 }
 
 /* offset to compensate for overlaying menu */
-a#output {
+a#output
+{
 	display: block;
 	position: relative;
 	top: -110px;
@@ -686,27 +687,33 @@ body.last td:last-child
 }
 
 body.stats .axis path,
-body.stats .axis line {
+body.stats .axis line
+{
 	fill: none;
 	stroke: #000;
 	shape-rendering: crispEdges;
 }
 
-body.stats .x.axis path {
+body.stats .x.axis path
+{
 	display: none;
 }
 
-body.stats .line {
+body.stats .line
+{
 	fill: none;
 	stroke: steelblue;
 	stroke-width: 1.5px;
 }
 
-body.stats .bar {
+body.stats .bar
+{
 	fill: #666;
 	font-family: Helvetica, sans-serif;
 }
-body.stats .bar text {
+
+body.stats .bar text
+{
 	color: black;
 }
 
